[metadata]
name = agent_trajectory_evaluation
version = 0.1.0
author = Abhishek Bhardwaj
author_email = abhishekbhardwaj13506@gmail.com
description = Unified evaluation toolkit for LLM agent reasoning, trajectory quality, and ground-truth KPI assessment
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
url = https://github.com/abhiai-git/agent_trajectory_evaluation
project_urls =
    Bug Tracker = https://github.com/abhiai-git/agent_trajectory_evaluation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    boto3
    numpy
    tqdm
    aiohttp
    google-generativeai
    anthropic
    openai
    sentence-transformers
